# UGC-WebSite-AI

./: .env.example  .gitignore  Dockerfile  README.md  buildspec.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
agent/: .bedrock_agentcore.yaml  Dockerfile  __init__.py  agentcore_client.py  agentcore_handler.py  model_router.py  requirements.txt  server.py  server_config.py
agent/memory/: __init__.py  memory_service.py
agent/prompts/: __init__.py  coding.py  planning.py
agent/tools/: __init__.py  browser_tool.py  code_generator.py  code_interpreter.py  deploy_tools.py  lambda_adapter.py  memory_tools.py  s3_cloudfront.py
docs/: agentcore-builtin-tools-guide.md  architecture.md  bedrock-agentcore-cli-deployment-guide.md  bedrock-agentcore-yaml-reference.md  strands-agent-tools-analysis.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/scripts/: start-dev.sh
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/Chat/: ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  index.ts
frontend/src/components/Layout/: Header.tsx  SplitLayout.tsx  index.ts
frontend/src/components/Preview/: index.ts  (+3 more)
frontend/src/hooks/: index.ts  useChat.ts  usePreview.ts
frontend/src/lib/: agent-client.ts  api.ts  mock-templates.ts  utils.ts
frontend/src/types/: index.ts
infra/: cdk.context.json  cdk.json  package.json  tsconfig.json
infra/assets/dynamic-placeholder/: server.js
infra/lib/: agentcore-runtime-stack.ts  backend-stack.ts  dynamic-deployment-stack.ts  static-deployment-stack.ts
scripts/: .agentcore-tools-config  build-image-codebuild.sh  build.sh  check-deployment-status.sh  create-agentcore-tools.sh  create-nodejs-layer.sh  demo.py  deploy-agent-runtime.py  deploy-aws.sh  deploy-ecs-backend.sh  deploy-frontend-lambda.sh  deploy.sh  fix-lambda-iam-permissions.sh  smart-commit.sh  start-agent.py
(+4 files in other folders)
