[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ugc-ai-demo"
version = "0.1.0"
description = "UGC AI Website Generation Demo - Strands Agent with AWS Deployment"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AWS Demo", email = "demo@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Strands Agents SDK
    "strands-agents>=1.0.0",
    "strands-agents-tools>=0.2.0",
    "strands-agents-tools[use_browser]",  # Browser tool support
    # AWS Bedrock AgentCore
    "bedrock-agentcore",
    "boto3>=1.42.0",
    # Web Framework
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
    # Browser dependencies
    "playwright",
    "nest_asyncio",
    "beautifulsoup4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
